# shuttle-cch23

./: Cargo.toml  README.md  Shuttle.toml
migrations/: 1_schema.up.sql  2_regions.up.sql
src/: main.rs
