[package]
name = "cch23-tanakh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
bytes = { version = "1.5.0" }
html-escape = "0.2.13"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = { version = "0.35.0", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
time = "0.3.30"
tokio = "1.35.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
ulid = "1.1.0"
uuid = "1.6.1"
