[package]
name = "cch23-tanakh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
bytes = { version = "1.5.0" }
country-boundaries = "1.2.0"
dms-coordinates = "1.1.0"
futures = "0.3.29"
futures-util = "0.3.29"
git2 = "0.18.1"
html-escape = "0.2.13"
image = "0.24.7"
isocountry = "0.3.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
s2 = "0.0.12"
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = { version = "0.35.0", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tar = "0.4.40"
tempfile = "3.8.1"
time = "0.3.30"
tokio = "1.35.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
ulid = "1.1.0"
unic = "0.9.0"
uuid = "1.6.1"
walkdir = "2.4.0"
